--- a/app/css/app.css
+++ b/app/css/app.css
@@ -36,8 +36,8 @@
  * Base structure
  */
 
-/* Move down content because we have a fixed navbar that is 50px tall */
-body {
+ /* Move down content because we have a fixed navbar that is 50px tall */
+ body {
   padding-top: 50px;
 }
 
@@ -46,7 +46,7 @@ body {
  * Global add-ons
  */
 
-.sub-header {
+ .sub-header {
   padding-bottom: 10px;
   border-bottom: 1px solid #eee;
 }
@@ -55,7 +55,7 @@ body {
  * Top navigation
  * Hide default border to remove 1px line.
  */
-.navbar-fixed-top {
+ .navbar-fixed-top {
   border: 0;
 }
 
@@ -63,8 +63,8 @@ body {
  * Sidebar
  */
 
-/* Hide for mobile, show later */
-.sidebar {
+ /* Hide for mobile, show later */
+ .sidebar {
   display: none;
   height: 100%;
 }
@@ -88,7 +88,7 @@ body {
  * Main content
  */
 
-.main {
+ .main {
   padding: 20px;
 }
 @media (min-width: 768px) {
@@ -104,7 +104,10 @@ body {
 /*
  * My Custom
  */
-html, body {height: 100%;}
-.mq-full-height{
+ .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+ html, body {height: 100%;}
+
+ .mq-full-height{
   height: 100%;
 }
